--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,12 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "@clerk/express": "1.7.60",
+    "cors": "2.8.5",
+    "express": "5.2.1",
+    "mongoose": "9.0.2",
+    "socket.io": "4.8.2"
   }
 }
